--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "../dist/out-tsc-e2e",
     "sourceMap": true,
     "target": "es5",
+    "underscore": "../node_modules/underscore/underscore.js",
     "typeRoots": [
       "../node_modules/@types"
     ]
